test/spec_vectors/simd_i16x8_sat_arith/fail/module_14.wat
(module (func $i16x8.sub_sat_s-arg-empty (result v128) (i16x8.sub_sat_s)))